# irondict

./: Cargo.toml  README.md  pyproject.toml
python/irondict/: __init__.py
python/tests/: test_all.py
src/: lib.rs
